--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
-ul li {
-  list-style-type: georgian;
+.app-wrapper  {
+  display: grid;
+  width: 80%;
+  margin: 0 auto;
+  grid-template-areas: 
+  "h h"
+  "n c";
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-gap: 10px;
+}
+.header {
+  grid-area: h;
+  background-color: #aeaeae;
+}
+.header img {
+  width: 50px;
+}
+.nav {
+  grid-area: n;
+  background-color: #aede;
+}
+.content {
+  grid-area: c;
+  background-color: #ae4;
 }
